--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "standard": "^17.0.0",
     "tailwindcss": "^3.2.7",
     "vite": "^4.1.0"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json"
   }
 }
